Full precision picking for PerformanceModel #690

--- a/examples/index.html
+++ b/examples/index.html
@@ -417,7 +417,10 @@
             ["picking_ray_mesh", "Ray-picking objects with an arbitrary World-space ray"],
             ["picking_ray_surface", "Ray-picking surfaces with an arbitrary World-space ray"],
             ["picking_ray_matrix", "Ray-picking objects with an arbitrary World-space ray"],
-            ["picking_setObjectsPickable", "Controlling what's pickable - only the blue object pickable"]
+            ["picking_setObjectsPickable", "Controlling what's pickable - only the blue object pickable"],
+
+            ["picking_pickSurfacePrecision_PerformanceModel_batching", "Full-performance surface picking with PerformanceModel and batched geometries"],
+            ["picking_pickSurfacePrecision_PerformanceModel_instancing", "Full-performance surface picking with PerformanceModel and instanced geometries"]
         ],
 
         "Slicing Models": [
@@ -561,6 +564,7 @@
             "#Geometry batching",
 
             ["sceneRepresentation_PerformanceModel_batching", "PerformanceModel with batched triangle geometries"],
+            ["sceneRepresentation_PerformanceModel_batching_geometryInMemory", "PerformanceModel with batched triangle geometries, stored in browser memory"],
             ["sceneRepresentation_PerformanceModel_batching_points", "PerformanceModel with batched point cloud geometries"],
             ["sceneRepresentation_PerformanceModel_batching_lines", "PerformanceModel with batched line geometries"],
             ["sceneRepresentation_PerformanceModel_batching_annotations", "PerformanceModel with batched triangle geometry and annotations"],
