--- a/examples/measurements_distance_createWithMouse.html
+++ b/examples/measurements_distance_createWithMouse.html
@@ -55,12 +55,13 @@
     //------------------------------------------------------------------------------------------------------------------
 
     const viewer = new Viewer({
-        canvasId: "myCanvas"
+        canvasId: "myCanvas",
+        pickSurfacePrecisionEnabled: true
     });
 
-    viewer.camera.eye = [-3.93, 2.85, 27.01];
-    viewer.camera.look = [4.40, 3.72, 8.89];
-    viewer.camera.up = [-0.01, 0.99, 0.039];
+    viewer.scene.camera.eye = [1841982.5187600704, 19.207790938410042, -5173303.042326414];
+    viewer.scene.camera.look = [1842011.793756829, 9.913817421536704, -5173299.841616623];
+    viewer.scene.camera.up = [0.2991762376746394, 0.9536370664170352, 0.0327096983532173];
 
     viewer.cameraControl.followPointer = true;
 
@@ -72,8 +73,11 @@
 
     const model = xktLoader.load({
         id: "myModel",
-        src: "../assets/models/xkt/v8/Duplex.xkt",
-        edges: true
+        src: "../assets/models/xkt/v7/MAP/MAP.xkt",
+        metaModelSrc: "../assets/models/xkt/v7/MAP/MAP.json",
+        edges: true,
+        excludeTypes: ["IfcSpace"],
+        objectDefaults: {}
     });
 
     //------------------------------------------------------------------------------------------------------------------
